# ml-explorations

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: mcp_config.json
broad_obesity/: infer.py  pyproject.toml  train.py
broad_obesity/broad-obesity-2-varying-marsupial/.crunchdao/: project.json  token
broad_obesity/broad-obesity-2-varying-marsupial/data/: .obesity_challenge_2.h5ad.zip.uncompressed  .obesity_challenge_2_local_gtruth.h5ad.zip.uncompressed  predict_perturbations_2.txt
broad_obesity/notebooks/: broad_obesity_analysis.ipynb
broad_obesity/src/broad_obesity/data/: loader.py
broad_obesity/src/broad_obesity/evaluation/: metrics.py
broad_obesity/src/broad_obesity/models/: linear_baseline.py  mean_shift_vae.py  perturbed_mean.py
broad_obesity/src/broad_obesity/utils/: submission.py
broad_obesity/tests/: test_metrics.py  test_vae.py
chronometer-mimic/tests/: test_chronometer.py
clinical-trial-optimizer/: README.md  clinical_trial_optimizer_demo.jsx
clinical-trial-optimizer/data/raw/: rwd_lot.xlsx
clinical-trial-optimizer/demo-app/: package-lock.json  package.json
clinical-trial-optimizer/notebooks/: 01_soc_agent.ipynb  02_et_agent.ipynb  03_ci_agent.ipynb  04_combined_output.ipynb  05_ci_rag_pipeline.ipynb
clinical-trial-optimizer/src/: agent_prompt_functions.py  ci_agent_prompt.py  ct_api.py  data_frame_functions.py  data_utils.py  orchestrator.py
clinical-trial-optimizer/src/rag/: chunker.py  ci_rag_pipeline.py  ci_reasoner.py  embedder.py  index.py  recommendation_evaluator.py  retrieval_evaluator.py  retriever.py
clinical-trial-optimizer/tests/: test_clinical_trial_optimizer.py
content-moderation/tests/: test_moderation.py
cybersecurity-agent/data/controls/: access_control_policy.txt  data_classification_policy.txt  (+1 more)
cybersecurity-agent/notebooks/: 01_rag_pipeline.ipynb  01_rag_pipeline_executed.ipynb
cybersecurity-agent/src/: agent.py  ingester.py  pipeline.py  vectorstore.py
cybersecurity-agent/tests/: test_cybersecurity.py
job-search-copilot/: app.py  requirements.txt
job-search-copilot/pages/: 1_Add_Job.py  2_Add_Interviewer.py  3_Compare_Opportunities.py  4_Dashboard.py
job-search-copilot/src/: company_research.py  interviewer.py  jd_fetcher.py  memory.py  pipeline.py  prompt1.py  prompt2.py  prompt3.py
mmm-marketing/notebooks/: 01_eda.ipynb  02_model.ipynb  02_model_executed.ipynb
mmm-marketing/src/: data_loader.py  model.py  sensitivity.py
mmm-marketing/tests/: test_mmm.py
sql-generator/notebooks/: 01_demo.ipynb  01_demo_executed.ipynb
sql-generator/src/: evaluator.py  executor.py  generator.py  schema_loader.py
sql-generator/tests/: test_sql_generator.py
(+4 files in other folders)
