[project]
name = "ml-explorations"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    # shared
    "pandas>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "ipykernel>=6.0",

    # mmm-marketing
    "pymc-marketing>=0.5",
    "arviz>=0.17",

    # chronometer-mimic
    "torch>=2.2",
    "transformers>=4.40",
    "datasets>=2.18",
    "meds-transforms>=0.3",

    # content-moderation
    "scikit-learn>=1.4",
    "sentence-transformers>=3.0",
    "chromadb>=0.5",
    "tweepy>=4.14",
]

[tool.pytest.ini_options]
testpaths = [
    "mmm-marketing/tests",
    "chronometer-mimic/tests",
    "content-moderation/tests",
    "cybersecurity-agent/tests",
    "sql-generator/tests",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["shared"]
