[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "broad-obesity"
version = "0.1.0"
description = "CrunchDAO x Broad Institute Obesity ML Competition"
requires-python = ">=3.10"
dependencies = [
    "anndata>=0.10",
    "scanpy>=1.10",
    "numpy>=1.26",
    "pandas>=2.1",
    "scipy>=1.11",
    "scikit-learn>=1.4",
    "torch>=2.2",
    "tqdm>=4.66",
]

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
